<resources>
    <string name="app_name">food-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favourite_recipes_fragment">Favourites</string>
    <string name="food_joke">Joke</string>
    <string name="action_button">action_button</string>
    <string name="angry_face_icon">angry face icon</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_100">100</string>
    <string name="clock_icon">clock icon</string>
    <string name="heart_icon">heart icon</string>
    <string name="recipe_image">recipe image</string>
    <string name="vegan_icon">Vegan Icon</string>
    <string name="vegan">Vegan</string>
</resources>